apps/uptime-kuma/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prefix-dashboard-services
  namespace: uptime-kuma
spec:
  addPrefix:
    prefix: /status/public
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-route
  namespace: uptime-kuma
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`status.cluster.trivernis.dev`) || Host(`status.cluster.trivernis.net`)
    kind: Rule
    services:
    - name: uptime-kuma
      port: 3001
  - match: Host(`status.trivernis.dev`) || Host(`status.trivernis.net`)
    kind: Rule
    middlewares:
      - prefix-dashboard-services
    services:
    - name: uptime-kuma
      port: 3001
